<resources>
    <string name="app_name">VirusInfo</string>
    <string name="VirusInfo" />
    <string name="statistics">Statistics</string>
    <string name="calculation">Calculation</string>
    <string name="prevention">Prevention</string>
    <string name="alert">Alert</string>
    <string name="activity_statistics">Statistics</string>
    <string name="covidrisk">Covid 19 Incidence Risk Calculation</string>
    <string name="thisis">This is only an approximate calculation, do not seriously count on it </string>
    <string name="location">Click to define location</string>
    <string name="weather">Click to define weather</string>
    <string name="peoplecount">Amount of contacts in 3 days</string>
    <string name="mask">Do you use a mask?</string>
    <string name="calculate">Calculate</string>
    <string name="temp">Your temperature in \u2103</string>
    <string name="firstof">Are you staying at home without going outside for no reason?</string>
    <string name="wmask">Do you keep safe distance from people on street?</string>
    <string name="cover">Are you cover your mouth and nose on street?</string>
    <string name="whands">Do you wash your hands and face when you return home?</string>
    <string name="wetclean">Do you ventilate your house and do wet cleaning?</string>
    <string name="toprevent">To prevent the possibility</string>
    <string name="toprevent1">of a virus infection, follow</string>
    <string name="toprevent2">the requirements below</string>
    <string name="protect">\nWithout going out, you protect yourself and others from the disease.\n</string>
    <string name="pickup">\nIn order not to pick up the virus from other people, keep a safe distance 1–1.5 meters.\n</string>
    <string name="chance">\nWhen you cover nose and mouth, the chance of the virus getting into your body or passing it to someone else decreases.\n</string>
    <string name="after">\nAfter being outside, bacteria may remain on your body, be sure to wash your face and hands.\n</string>
    <string name="airing">\nAfter airing and cleaning, you will surely save your room from harmful bacteria.\n</string>
    <string name="right">\nYou are doing everything right! Be healthy!\n</string>
    <string name="reduce">You need to reduce the number of contacts, stay home</string>
    <string name="tempert">Keep track of your temperature, it is the main symptom of the disease</string>
    <string name="illnes">Your well-being is like symptoms of an illness</string>
    <string name="lookfor">Look for ways to deal with them</string>
    <string name="recommend">Your temperature is above normal, we recommend you see a doctor</string>
    <string name="load">Loading…</string>
    <string name="humidity">humidity: </string>
    <string name="notfound">Not found :( Check internet</string>
    <string name="defineloc">Define location</string>
    <string name="definewea">Define weather</string>
    <string name="defineppl">Enter amount of people</string>
    <string name="definetem">Enter temperature</string>
    <string name="define">Define a location</string>
    <string name="entercurrent">Enter current temperature</string>
    <string name="result">Your result of incidence risk</string>
    <string name="okay">You are rather at safe zone</string>
    <string name="norm">You may be at risk zone</string>
    <string name="bad">You are at risk zone</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string-array name="feels">
        <item>I feel good</item>
        <item>I have a cough</item>
        <item>Feel headache</item>
        <item>Feel a cold</item>
    </string-array>
    <string name="ifeelg">I feel good</string>
    <string name="ihavec">I have a cough</string>
    <string name="feelh">Feel headache</string>
    <string name="feelac">Feel a cold</string>
    <string name="total_cases">Total cases</string>
    <string name="cases_number"> </string>
    <string name="total_recovered">Total recovered</string>
    <string name="recovered_number"> </string>
    <string name="total_deaths">Total deaths</string>
    <string name="deaths_number"> </string>
    <string name="view_by_country">View by\ncountry</string>
    <string name="country">Country</string>
    <string name="cases">Cases</string>
    <string name="recovered">Recov</string>
    <string name="deaths">Deaths</string>
    <string name="number"> </string>
    <string name="todo">TODO</string>
    <string name="statisticsof">Statistics of Covid 19</string>
    <string name="notfoundsorry">Can\'t define a city</string>
    <string name="age">Enter you age</string>
    <string name="entercurrentage">Enter current age</string>
</resources>
