<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:id="@+id/tablelayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="15sp">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cell_shape"
                        android:paddingLeft="5sp"
                        android:paddingTop="9sp"
                        android:paddingRight="5sp"
                        android:paddingBottom="9sp"
                        android:text="@string/number"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cell_shape"
                        android:fontFamily="@font/gilroys"
                        android:padding="9sp"
                        android:text="@string/country"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cell_shape_cases"
                        android:fontFamily="@font/gilroys"
                        android:padding="9sp"
                        android:text="@string/cases"
                        android:textAlignment="center"
                        android:textColor="#E1DDDD"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cell_shape_recovered"
                        android:fontFamily="@font/gilroys"
                        android:padding="9sp"
                        android:text="@string/recovered"
                        android:textAlignment="center"
                        android:textColor="#E1DDDD"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cell_shape_deaths"
                        android:fontFamily="@font/gilroys"
                        android:padding="9sp"
                        android:text="@string/deaths"
                        android:textAlignment="center"
                        android:textColor="#E1DDDD"
                        android:textSize="20sp" />
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>