<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".CalculationActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/gilroys"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/covidrisk"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/gilroys"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/thisis"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView3"
                app:layout_constraintVertical_bias="0.00999999" />

            <Button
                android:id="@+id/button4"
                android:layout_width="310dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/roundedbutton"
                android:backgroundTint="#FF6647"
                android:fontFamily="@font/gilroys"
                android:paddingStart="25dp"
                android:paddingLeft="25dp"
                android:paddingEnd="25dp"
                android:paddingRight="25dp"
                android:text="@string/location"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:onClick="Location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.06999999"
                />

            <Button
                android:id="@+id/button5"
                android:layout_width="310dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/roundedbutton"
                android:backgroundTint="#FF6647"
                android:fontFamily="@font/gilroys"
                android:paddingStart="25dp"
                android:paddingLeft="25dp"
                android:paddingEnd="25dp"
                android:paddingRight="25dp"
                android:text="@string/weather"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:onClick="Weather"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button4"
                app:layout_constraintVertical_bias="0.0" />


            <EditText
                android:id="@+id/editText4"
                android:layout_width="310dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/roundedbutton"
                android:backgroundTint="#FF6647"
                android:ems="10"
                android:fontFamily="@font/gilroys"
                android:hint="@string/age"
                android:inputType="number"
                android:maxLength="3"
                android:paddingStart="25dp"
                android:paddingLeft="25dp"
                android:paddingTop="13dp"
                android:paddingEnd="25dp"
                android:paddingRight="25dp"
                android:paddingBottom="13dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button5" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="310dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/roundedbutton"
                android:backgroundTint="#FF6647"
                android:ems="10"
                android:fontFamily="@font/gilroys"
                android:hint="@string/peoplecount"
                android:inputType="number"
                android:maxLength="3"
                android:paddingStart="25dp"
                android:paddingLeft="25dp"
                android:paddingTop="13dp"
                android:paddingEnd="25dp"
                android:paddingRight="25dp"
                android:paddingBottom="13dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText4" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="310dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/roundedbutton"
                android:backgroundTint="#FF6647"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                android:fontFamily="@font/gilroys"
                android:paddingStart="25dp"
                android:paddingLeft="25dp"
                android:paddingTop="10dp"
                android:paddingEnd="25dp"
                android:paddingRight="25dp"
                android:paddingBottom="10dp"
                android:text="@string/mask"
                android:textAlignment="inherit"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                android:theme="@style/WhiteCheck"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText2" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="310dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/roundedbutton"
                android:backgroundTint="#FF6647"
                android:ems="10"
                android:fontFamily="@font/gilroys"
                android:hint="@string/temp"
                android:inputType="numberDecimal"
                android:maxLength="4"
                android:paddingStart="25dp"
                android:paddingLeft="25dp"
                android:paddingTop="13dp"
                android:paddingEnd="25dp"
                android:paddingRight="25dp"
                android:paddingBottom="13dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkBox" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="310dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/spinstyle"
                android:entries="@array/feels"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:paddingTop="12dp"
                android:paddingEnd="12dp"
                android:paddingRight="12dp"
                android:paddingBottom="12dp"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText" />

            <Button
                android:id="@+id/button6"
                android:layout_width="144dp"
                android:layout_height="72dp"
                android:layout_marginTop="38dp"
                android:layout_marginBottom="64dp"
                android:background="@drawable/button_selector"
                android:backgroundTint="#ffffff"
                android:elevation="2dp"
                android:fontFamily="@font/gilroys"
                android:stateListAnimator="@null"
                android:text="@string/calculate"
                android:textAllCaps="false"
                android:textColor="#000"
                android:textSize="18sp"
                android:onClick="Result"
                android:translationY="7dp"
                android:translationZ="9dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>